set up reasonable spacing and also fixed the empty array bug... in a way...

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 .pageContainer{
   display:flex;
+  justify-content:space-evenly;
 }
 
 .headerBanner{
@@ -35,6 +36,15 @@
   font-size:220px;
 }
 
+.sassy-announce{
+  width:100%;
+  font-size:70px;
+}
+
+.sassy-nameOfWinner{
+  width:100%;
+  font-size:140px;
+}
 .displayFlex{
   display: flex;
   flex-direction: column;
